array.island.Island.scala.error
Erreur de compilation :
Island:6: error: reassignment to val
      k=k+1
       ^Island:7: error: not found: value DoubleEtage
      DoubleEtage=DoubleEtage+1 
      ^Island:9: error: reassignment to val
      k=k+1
       ^Island:13: error: not found: value DoubleEtage
        return DoubleEtage/2
               ^